fixed back button on mobile

--- a/styles/style2.css
+++ b/styles/style2.css
@@ -119,6 +119,9 @@ body {
   margin-top:0px;
 }
 
+.navbar2 {
+  margin-right:0.5rem;
+}
 .img {
   padding-top: 5%;
 
